// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FinishRegistration renders correctly 1`] = `
<div>
  <div
    data-stylename="formWrapper"
  >
    <h1
      data-stylename="title"
    >
      One more step!
    </h1>
    <p
      data-stylename="blurb"
    >
      Hi 
      hi@bye.com
       we just need to know your name and password and you're in.
    </p>
    <TextInput
      aria-label="name"
      autoFocus={true}
      data-stylename="field"
      id="name"
      internalLabel="Name"
      label="name"
      name="name"
      onChange={[Function]}
      type="text"
      value="Smiley"
    />
    <TextInput
      aria-label="password"
      autoComplete="off"
      data-stylename="field"
      id="password"
      internalLabel="Password"
      label="password"
      name="password"
      onChange={[Function]}
      type="password"
      value=""
    />
    <TextInput
      aria-label="passwordConfirmation"
      autoComplete="off"
      data-stylename="field"
      id="passwordConfirmation"
      internalLabel="Confirm Password"
      label="passwordConfirmation"
      name="passwordConfirmation"
      onChange={[Function]}
      onEnter={[Function]}
      type="password"
      value=""
    />
    <Button
      color="gray"
      data-stylename="submit"
      label="Jump in to Hylo!"
      onClick={null}
    />
  </div>
</div>
`;

exports[`FinishRegistration renders correctly with an error 1`] = `
<div>
  <div
    data-stylename="formWrapper"
  >
    <h1
      data-stylename="title"
    >
      One more step!
    </h1>
    <p
      data-stylename="blurb"
    >
      Hi 
      hi@bye.com
       we just need to know your name and password and you're in.
    </p>
    <div
      data-stylename="error"
    >
      some error
    </div>
    <TextInput
      aria-label="name"
      autoFocus={true}
      data-stylename="field"
      id="name"
      internalLabel="Name"
      label="name"
      name="name"
      onChange={[Function]}
      type="text"
      value="Smiley"
    />
    <TextInput
      aria-label="password"
      autoComplete="off"
      data-stylename="field"
      id="password"
      internalLabel="Password"
      label="password"
      name="password"
      onChange={[Function]}
      type="password"
      value=""
    />
    <TextInput
      aria-label="passwordConfirmation"
      autoComplete="off"
      data-stylename="field"
      id="passwordConfirmation"
      internalLabel="Confirm Password"
      label="passwordConfirmation"
      name="passwordConfirmation"
      onChange={[Function]}
      onEnter={[Function]}
      type="password"
      value=""
    />
    <Button
      color="gray"
      data-stylename="submit"
      label="Jump in to Hylo!"
      onClick={null}
    />
  </div>
</div>
`;
